[package]
name = "rust_comparison_of_threads"
version = "0.1.0"
authors = ["x1- <viva008@gmail.com>"]

[[bin]]
name = "comparison_of_threads"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = {version  = "^2.31", features = ["yaml"]}
futures          = "^0.1"
futures-cpupool  = "0.1.8"
# futures-preview  = "0.3.0-alpha.9"
rayon            = "^1.0.3"
tokio            = "0.1.13"
tokio-threadpool = "0.1.8"
